Fix: header, footer, z-index del banner

--- a/TP3/styles/header-footer.css
+++ b/TP3/styles/header-footer.css
@@ -8,7 +8,7 @@ header {
     justify-content: center;
     position: sticky;
     top: 0;
-    z-index: 100000000000000;
+    z-index: 8888;
     left: 0;
     padding: 0 1rem;
 }
